tests/ui/parser/issues/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.stderr
error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:20:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL | / macro_rules! expand_to_enum {
LL | |     () => {
LL | |         enum BadE {}
   | |         ^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `expand_to_enum!`
...
LL |       expand_to_enum!();
   |       ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope

error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:31:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL | / macro_rules! expand_to_enum {
LL | |     () => {
LL | |         enum BadE {}
   | |         ^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `expand_to_enum!`
...
LL |       expand_to_enum!();
   |       ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope

error: struct is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:42:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^
   |
   = help: consider moving the struct out to a nearby module scope

error: enum is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL | / macro_rules! expand_to_enum {
LL | |     () => {
LL | |         enum BadE {}
   | |         ^^^^^^^^^
LL | |
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `expand_to_enum!`
...
LL |       expand_to_enum!();
   |       ----------------- in this macro invocation
   |
   = help: consider moving the enum out to a nearby module scope

error: aborting due to 6 previous errors

